--- a/StackAttack/StackAttack.csproj
+++ b/StackAttack/StackAttack.csproj
@@ -15,6 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Levels\AlphaLevel.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\desaturated.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
