Started Working on AI

--- a/StackAttack/StackAttack.csproj
+++ b/StackAttack/StackAttack.csproj
@@ -18,6 +18,12 @@
     <None Update="Levels\AlphaLevel.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Shaders\superDesaturated.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Shaders\superDesaturated.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\maskShader.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -48,7 +54,7 @@
     <None Update="Textures\Error.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Textures\IdeaV1.png">
+    <None Update="Textures\TilesAndSprites.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Textures\spriteDefinitions.json">
