Added first real four level

--- a/StackAttack/StackAttack.csproj
+++ b/StackAttack/StackAttack.csproj
@@ -32,6 +32,9 @@
     <None Update="Levels\Level3.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Levels\Level4.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="libbass.so">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
